Get new msgBroker into Azure

--- a/ccnet/Azure/TeleoptiCCC/index.htm
+++ b/ccnet/Azure/TeleoptiCCC/index.htm
@@ -11,6 +11,8 @@
 <a href="/Web/">Web</a>
 </br>
 <a href="/RTA/TeleoptiRtaService.svc">RTA web Service</a>
+</br>
+<a href="/broker/signalr/negotiate">Broker</a>
 </body>
 </html>
 
