--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Preference.Tests.html
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Preference.Tests.html
@@ -49,7 +49,8 @@
 				});
 
 				test("day view model should load feedback", function () {
-					var viewModelDay = new Teleopti.MyTimeWeb.Preference.DayViewModel("2012-06-11");
+					var viewModelDay = new Teleopti.MyTimeWeb.Preference.DayViewModel();
+					viewModelDay.Date = "2012-06-11";
 
 					Teleopti.MyTimeWeb.Ajax = {};
 					Teleopti.MyTimeWeb.Ajax.Ajax = function (options) {
@@ -73,14 +74,14 @@
 					equal(viewModelDay.PossibleContractTimes(), "7:00-12:00");
 				});
 
-				module("Teleopti.MyTimeWeb.Preference init");
+				module("Teleopti.MyTimeWeb.Preference view binding");
 
-				test("init should load day feedback and bind", function () {
+				test("should load day feedback and bind", function () {
 
 					$("#qunit-fixture")
 						.html("<div id='Preference-period-feedback-view' data-bind='text: PossibleResultContractTimeLower'>No data!</div>")
-						.append("<li data-mytime-date='2012-06-11' class='feedback' data-bind='text: PossibleContractTimeLower' />")
-						.append("<li data-mytime-date='2012-06-12' class='feedback' data-bind='text: PossibleContractTimeLower' />");
+						.append("<li data-mytime-date='2012-06-11' class='inperiod feedback' data-bind='text: PossibleContractTimeLower' />")
+						.append("<li data-mytime-date='2012-06-12' class='inperiod feedback' data-bind='text: PossibleContractTimeLower' />");
 
 					Teleopti.MyTimeWeb.Ajax = {};
 					Teleopti.MyTimeWeb.Ajax.Ajax = function (options) {
@@ -103,10 +104,10 @@
 					equal($('li[data-mytime-date="2012-06-12"]').text(), "8:00");
 				});
 
-				test("init should only load feedback for days with class feedback", function () {
+				test("should only load feedback for days with class feedback", function () {
 					$("#qunit-fixture")
 						.html("<li data-mytime-date='2012-06-11' data-bind='text: PossibleContractTimeLower' />")
-						.append("<li data-mytime-date='2012-06-12' class='feedback' data-bind='text: PossibleContractTimeLower' />");
+						.append("<li data-mytime-date='2012-06-12' class='inperiod feedback' data-bind='text: PossibleContractTimeLower' />");
 
 					Teleopti.MyTimeWeb.Ajax = {};
 					Teleopti.MyTimeWeb.Ajax.Ajax = function (options) {
@@ -121,6 +122,25 @@
 					equal($('li[data-mytime-date="2012-06-12"]').text(), "8:00");
 				});
 
+				test("should compute with static schedule data", function () {
+
+					$("#qunit-fixture")
+						.html("<div id='Preference-period-feedback-view'><span data-bind='text: PossibleResultContractTimeLower' /><span data-bind='text: PossibleResultContractTimeUpper' /></div>")
+						.append("<li data-mytime-date='2012-06-13' class='inperiod'><span data-mytime-contract-time='120' /></li>")
+						.append("<li data-mytime-date='2012-06-14' class='inperiod'><span data-mytime-contract-time='60' /></li>");
+
+					var ajax = false;
+					Teleopti.MyTimeWeb.Ajax = {};
+					Teleopti.MyTimeWeb.Ajax.Ajax = function () { ajax = true; };
+
+					expect(3);
+
+					Teleopti.MyTimeWeb.Preference.InitViewModels();
+
+					ok(!ajax);
+					equal($('#Preference-period-feedback-view [data-bind*="PossibleResultContractTimeLower"]').text(), "3:00");
+					equal($('#Preference-period-feedback-view [data-bind*="PossibleResultContractTimeUpper"]').text(), "3:00");
+				});
 			});
 		</script>
   
