js test fix. oops.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Preference.Tests.html
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Scripts/Teleopti.MyTimeWeb.Preference.Tests.html
@@ -57,7 +57,7 @@
 									Upper: 4
 								},
 								PossibleResultDaysOff: 1,
-								TargetHours: {
+								TargetContractTime: {
 									Lower: "35:00",
 									Upper: "45:00"
 								}
