--- a/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/BeforeTestRun.html
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/BeforeTestRun.html
@@ -1,28 +1,52 @@
 ﻿<!doctype html>
 <html>
     <head>
-        <title>Before test run</title>
+        <title>Test run setup</title>
     </head>
     <style>
         body {
-			padding: 30px;
-			text-align: center;        
+            font-family: Helvetica;
+            padding: 30px;
         }
-        h1{
-			padding: 40px;
-			background-color: #333355;
-			border-radius: 10px;
-			border-top: 2px solid #000033;
-			border-left: 2px solid #000033;
-			border-bottom: 2px solid #bbbbff;
-			border-bottom: 2px solid #bbbbff;
-			text-shadow: 2px 2px 1px #000033, -1px -1px 0px #ddddff;
-			color: #bbbbff;
-			font-family: Verdana;
-			font-size: 20px;
+        .frame {
+            padding: 20px;
+            background-color: #ddffdd;
+            border-radius: 4px;
+            border: 1px solid #00ff00;
+            color: #555555;
+        }
+        .frame h1 {
+            margin-left: 20px;
+            font-size: 18px;
+        }
+        .inset {
+            margin-top: 23px;
+            border: 1px solid #00ff00;
+            border-radius: 4px;
+            background: white;
+            padding: 10px;
+        }
+        .inset ul {
+            padding-left: 40px;
+            list-style-type: circle;
+            line-height: 20px;
+            font-size: 12px;
         }
     </style>
     <body>
-        <h1>Setting up database and state and such...</h1>
+        <div class="frame">
+            <h1>Test run setup</h1>
+            <div class="inset">
+                <ul>
+                    <li>Configuring test site</li>
+                    <li>Creating Ccc7 database</li>
+                    <li>Creating Analytics database</li>
+                    <li>Setting up state</li>
+                    <li>Setting up Ccc7 minimum database state</li>
+                    <li>Setting up Ccc7 global database state</li>
+                    <li>Backing up Ccc7 database state</li>
+                </ul>
+            </div>
+        </div>
     </body>
 </html>​
